--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Zhenman Zhang"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Nanjing University of Information Science & Technology"
+  bio              : "Nanjing University of Information Science and Technology (NUIST)"
   location         : "Nanjing, China"
   employer         :
   pubmed           : 
