--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,14 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+#  - title: "Invited Talks"
+#    url: "/#-invited-talks"
+
+  - title: "Teamwork"
+    url: "/#-teamwork"
 
   - title: "Internships"
     url: "/#-internships"
+
+  - title: "Extra-curricular Activities"
+    url: "/#-extra-curricular-activities"
